# AI-2

./: CMakeLists.txt  README.md
Dev/: main.cpp
Dev/Assignment/: assignment.cpp  assignment.h  defines.h  graphing.cpp  graphing.h  helper.cpp  helper.h  individual.cpp  individual.h
Dev/WorkFiles/Worksheet 0/: worksheet.ipynb
Dev/WorkFiles/Worksheet 3/: workpls.py  worksheet.ipynb
Worksheet 1/: worksheet.ipynb
Worksheet 2/: worksheet.ipynb
Worksheet 3/: workpls.py
files/: Assignment (AutoRecovered).docx  Assignment.docx  ~$signment (AutoRecovered).docx  ~$signment.docx  ~WRL0946.tmp
files/MetaAI/Inspection/: tests.md
files/MetaAI/Large Study/: tests.md
files/MetaAI/Small Study/: tests.md
files/MetaAI/Tiny Study/: tests.md
